--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/preset-react": "^7.7.0"
   }
 }
