--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "devicelookalike",
+  "name": "react_device_lookalike",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "basic": "^2.0.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "user": "0.0.0"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
+  "peerDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish:npm": "rm -rf dist && mkdir dist &&  babel ./src/components -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,6 +39,21 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
-    "@babel/preset-react": "^7.7.0"
-  }
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "babel-loader": "^8.0.6"
+  },
+  "description": "Mobile devices lookalike. ioS and Android.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IkkyOdufade/react_device_lookalike.git"
+  },
+  "author": "Ikky",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/IkkyOdufade/react_device_lookalike/issues"
+  },
+  "homepage": "https://github.com/IkkyOdufade/react_device_lookalike#readme"
 }
