--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_device_lookalike",
+  "name": "react-device-lookalike",
   "version": "1.0.0",
   "private": false,
   "dependencies": {
