edited the title again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-device-lookalike",
+  "name": "react-mobiledevices-lookalike",
   "version": "1.0.1",
   "private": false,
   "dependencies": {
