created a lib folder and added a new indes.js file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-mobiledevices-lookalike",
   "version": "1.0.4",
   "private": false,
+   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": ["dist"],
   "dependencies": {
     "basic": "^2.0.3",
     "np": "^5.1.3",
@@ -18,9 +21,12 @@
   "peerDependencies": {},
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-examples": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build":
+    "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,7 +51,6 @@
     "babel-loader": "^8.0.6"
   },
   "description": "Mobile devices lookalike. ioS and Android.",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IkkyOdufade/react_device_lookalike.git"
