--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-mobiledevices-lookalike",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": false,
-   "main": "dist/index.js",
+  "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "basic": "^2.0.3",
     "np": "^5.1.3",
@@ -24,9 +26,7 @@
     "build-examples": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build":
-    "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js"
-
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
