--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-mobiledevices-lookalike",
   "version": "1.0.7",
   "private": false,
-  "main": "src/index.js",
+  "main": "src/index",
+  "typings": "src/index",
   "files": [
     "src",
     "src/lib",
