--- a/src/typings/tsconfig.json
+++ b/src/typings/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -12,15 +12,25 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "typeRoots": [
+      "../../typings",
+      "../../node_modules/@types"
+  ]
   },
   "include": [
-    "src"
-  ]
+    "src",
+    "index.d.ts"
+  ],
+  "exclude": [
+    "../../node_modules",
+    "../../typings"
+],
+
 }
