--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
     "np": "^5.1.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "user": "0.0.0"
+    "user": "0.0.0",
+    "react-router": "^5.1.2",
+    "reactstrap": "^8.1.1"
   },
   "babel": {
     "presets": [
       "@babel/preset-react"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0"
+  },
   "scripts": {
-    "start": "react-scripts start ./webpack.config.js",
+    "start": "react-scripts start ./ webpack.config.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -56,7 +62,7 @@
     "@babel/preset-react": "^7.7.0",
     "babel-loader": "^8.0.6"
   },
-  "description": "Mobile devices lookalike. ioS and Android.",
+  "description": "Mobile devices lookalike. iOS and Android.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IkkyOdufade/react_device_lookalike.git"
