--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
-  "presets": [
-      "@babel/env",
-      "@babel/react"
-  ]
+  "presets": ["@babel/preset-env", 
+    "@babel/preset-react",
+  "es2015"],
+  "plugins": [
+    "@babel/transform-async-to-generator",
+    "@babel/transform-arrow-functions",
+    "@babel/transform-modules-commonjs"
+]
+    
 }
