--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     ]
   },
   "dependencies": {
+    "@babel/plugin-transform-arrow-functions": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
