--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,9 @@
 {
   "presets": ["@babel/preset-env", 
-    "@babel/preset-react",
-  "es2015"],
+    "@babel/preset-react"],
   "plugins": [
-    "@babel/transform-async-to-generator",
-    "@babel/transform-arrow-functions",
-    "@babel/transform-modules-commonjs"
+    "@babel/plugin-transform-arrow-functions",
+    "@babel/plugin-transform-modules-commonjs"
 ]
     
 }
