--- a/package.json
+++ b/package.json
@@ -22,25 +22,22 @@
     "react-router": "^5.1.2",
     "reactstrap": "^8.1.1"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-react"
-    ]
-  },
   "dependencies": {
-    "@babel/plugin-transform-arrow-functions": "^7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+   
+    "css-loader": "^3.2.0",
+    "file-loader": "^5.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
-    "start": "react-scripts start ./ webpack.config.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:lib": "rm -rf build && NODE_ENV=production babel src/lib --out-dir build --copy-files --ignore __tests__,spec.js,test.js"
+    "start": "webpack-dev-server — mode development — open — hot",
+    "webpack": "webpack",
+    "dev": "npm run webpack -- --mode development --watch",
+    "build": "npm run webpack -- --mode production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -60,9 +57,12 @@
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "babel-loader": "^8.0.6"
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+     "@babel/plugin-transform-arrow-functions": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "webpack-cli": "^3.3.10"
   },
   "description": "Mobile devices lookalike. iOS and Android.",
   "repository": {
